sort.basic.selection.AlgSelectionSort.scala.error
Erreur de compilation :
AlgSelectionSort:5: error: not found: value getvaleur
  var Amin=getvaleur(deb)
           ^AlgSelectionSort:9: warning: enclosing method plusPetit has result type Unit: return value discarded
  return a
  ^AlgSelectionSort:21: error: type mismatch;
 found   : Unit
 required: Int
    echange(pivot,plusPetit(pivot))
                           ^