sort.basic.selection.AlgSelectionSort.scala.code
def plusPetit(deb:Int){
	val lgr=getNombreValeurs()
  var a=deb
  var Amin=getvaleur(deb)
  for (b<-deb to lgr-1){
    if (getValeur(b)<Amin){a=b}
  }
  return a
}





def selectionSort() {
	val lgr=getNombreValeurs()
  
  
  for(pivot<-0 to lgr-2){
    echange(pivot,plusPetit(pivot))
  }}